<resources>
    <string name="app_name">Notes</string>
    <string name="note_hint_title">Title of your note!</string>
    <string name="note_hint_content">What could you note there?</string>
    <string name="note_title">Note Title</string>
    <string name="show_note">Note</string>
    <string name="show_content">Content</string>
    <string name="multiple_delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="cancel_delete">Cancel</string>
    <string name="edit_note">Edit</string>
    <string name="there_is_no_notes">There is no notes</string>
    <string name="lusersks_gmail_com">lusersks@gmail.com</string>
    <string name="raman_skaskevich">Raman Skaskevich</string>

    <!--Menus-->
    <string name="menu_settings">Settings</string>
    <string name="menu_form_save">Save</string>
    <string name="menu_show_note">Show</string>
    <string name="menu_edit_note">Edit</string>
    <string name="menu_delete_notes">Delete several notes</string>
    <string name="menu_show_item_delete">Delete</string>
    <string name="menu_show_item_edit">Edit</string>
    <string name="menu_main_clear">Clear List</string>

    <!--String for left slider-->
    <string name="nav_notes">Notes</string>
    <string name="nav_todo">Todo</string>
    <string name="nav_actions">Actions</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <!---->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="fab_note">Note</string>
    <string name="fab_todo">Todo</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_notes_and_todo">All</string>
    <string name="btn_save_note">Save</string>
    <string name="btn_cancel_save">Cancel</string>
</resources>
