<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes_and_todo"
            android:title="@string/nav_notes_and_todo"
            />
        <item
            android:id="@+id/nav_notes_list"
            android:icon="@drawable/ic_view_list"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/ic_done_all"
            android:title="@string/nav_todo" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_exit" />
    </group>

</menu>
